2010-01-10  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: operator[] for pairlist using proxies
	* src/Pairlist.cpp : idem
	* inst/unitTests/runit.Pairlist.R: new unit tests
	
	* src/Rcpp/Language.h: same for Language
	* src/Language.cpp : idem
	* inst/unitTests/runit.Language.R: new unit tests
	
	* inst/unitTests/runit.Function.R: added unit test for function
	throwing exceptions

	* src/Function.cpp: grab the condition message and not the call

2010-01-09  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/RObject.h: attr can now be used to get or set the 
	attribute (used to be read only). This is another manifestation
	of the proxy pattern. The rhs can be anything wrap can handle

	* inst/unitTests/runit.RObject.R: added test.RObject.attr.set
	unit test (setting attribute).

	* src/Rcpp/Function.h: Function::operator() now throws an 
	exception if an R error occurs.

2010-01-08  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/wrap.h: added wrap( size_t ) to disambiguate it

	* int/unitTests/runit.XPTr.R: forgot to set the finalizer on the
	external pointer

	* src/Rcpp/Pairlist.h: Pairlist gains a push_back, replace,
	length, size, remove and insert methods

	* src/Rcpp/Language.h: idem for Language

2010-01-07  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: gains a push_front method

	* src/Rcpp/wrap.h : now the result type of the various wrap 
	functions depends on the parameters. wrap( bool ) makes a
	LogicalVector, etc ... wrap(SEXP) dispatches to the 
	appropriate Rcpp:: class depending on TYPEOF

	* src/Rcpp/RObject.h: added methods "isS4", "slot" 
	and "hasSlot" to deal with S4 objects
	* inst/unitTests/runit.S4.R: unit tests

	* src/Rcpp/ComplexVector.h: new class Rcpp::ComplexVector
	to manage ... complex vectors (CPLXSXP)
	* src/ComplexVector.cpp: implementation
	* inst/unitTests/runit.ComplexVector.R: unit tests

	* src/Rcpp/Promise.h: new class Rcpp::Promise to manage